--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,38 +7,27 @@ orbs:
 jobs:
   build:
     macos:
-      xcode: 15.4.0 # Specify the Xcode version here
+      xcode: 15.4.0
     steps:
-      - checkout # Checkout the code as the first step.
-
-      # Build the project
+      - checkout
       - run:
           name: Build Project
           command: xcodebuild -project PokeStudy.xcodeproj -scheme PokeStudy -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' CODE_SIGNING_ALLOWED=NO clean build -skipPackagePluginValidation -skipMacroValidation -allowProvisioningUpdates
-      
-      - codecov/upload: { validate: false }
-      
-      # Store build artifacts (optional)
-      - store_artifacts:
-          path: ~/Library/Developer/Xcode/DerivedData/PokeStudy/Build/Products
-          destination: build-output
 
   test:
     macos:
-      xcode: 15.4.0 # Specify the Xcode version here
+      xcode: 15.4.0
     steps:
-      - checkout # Checkout the code as the first step.
-
-      # Run tests
+      - checkout
       - run:
           name: Run Tests
           command: xcodebuild test -project PokeStudy.xcodeproj -scheme PokeStudyTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' -enableCodeCoverage YES -skipPackagePluginValidation -skipMacroValidation -allowProvisioningUpdates
-      # Collect test results
       - store_test_results:
           path: ~/Library/Developer/Xcode/DerivedData/PokeStudy/Logs/Test
       - store_artifacts:
           path: ~/Library/Developer/Xcode/DerivedData/PokeStudy/Logs/Test
           destination: test-output
+      - codecov/upload: { validate: false }
 
 workflows:
   build_and_test_workflow:
