--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - run:
           name: Run Tests
-          command: xcodebuild test -project PokeStudy.xcodeproj -scheme PokeStudyTests -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' -enableCodeCoverage YES -skipPackagePluginValidation -skipMacroValidation -allowProvisioningUpdates
+          command: xcodebuild test -project PokeStudy.xcodeproj -scheme PokeStudy -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14' -enableCodeCoverage YES -skipPackagePluginValidation -skipMacroValidation -allowProvisioningUpdates
       - store_test_results:
           path: ~/Library/Developer/Xcode/DerivedData/PokeStudy/Logs/Test
       - store_artifacts:
